--- a/index.html
+++ b/index.html
@@ -11,24 +11,35 @@
         <div class="top-bar">
             <div class="user-info">
                 <img src="https://avatars.githubusercontent.com/u/96704418?v=4" alt="Usuario" class="user-icon">
-                <span class="user-name">Ernesto Saer</span>
+                <span class="user-name">Ernesto Saer(usuario1)</span>
             </div>
         </div>
     </header>
     <main>
-        <div class="cards-container">
-        </div>
+        <div class="cards-container"></div>
         <button id="add-pet-button">Agregar nueva mascota</button>
         
         <form id="new-pet-form" style="display: none;">
             <label for="pet-name">Nombre:</label>
             <input type="text" id="pet-name" name="pet-name" required>
             <label for="pet-age">Edad:</label>
-            <input type="number" id="pet-age" name="pet-age" required>
+            <input type="number" id="pet-age" name="pet-age" min="0" required>
             <label for="pet-breed">Raza:</label>
-            <input type="text" id="pet-breed" name="pet-breed" required>
-            <label for="pet-weight">Peso:</label>
-            <input type="number" id="pet-weight" name="pet-weight" required>
+            <select id="pet-breed" name="pet-breed" required>
+                <option value="">Seleccione una raza</option>
+                <option value="Labrador">Labrador</option>
+                <option value="Bulldog">Bulldog</option>
+                <option value="Beagle">Beagle</option>
+                <option value="Poodle">Poodle</option>
+                <option value="Rottweiler">Rottweiler</option>
+                <option value="Pastor Alemán">Pastor Alemán</option>
+                <option value="Golden Retriever">Golden Retriever</option>
+                <option value="Chihuahua">Chihuahua</option>
+                <option value="Husky">Husky</option>
+                <option value="Doberman">Doberman</option>
+            </select>
+            <label for="pet-weight">Peso(kg):</label>
+            <input type="number" id="pet-weight" name="pet-weight" min="0" required>
             <button type="submit">Registrar Mascota</button>
         </form>
     </main>
