--- a/index.html
+++ b/index.html
@@ -30,6 +30,6 @@
     <footer>
         <p>&copy; DevKings</p>
     </footer>
-    <script src="script.js"></script>
+    <script src="scriptLogin.js"></script>
 </body>
 </html>
