cambia metodo de envio

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="right-side">
             <div class="login-container">
                 <h1>Bienvenido</h1>
-                <form action="dashboard.html" method="post">
+                <form action="dashboard.html" method="get">
                     <input type="text" name="username" placeholder="Usuario" required>
                     <input type="password" name="password" placeholder="Contraseña" required>
                     <button class="boton-Sesion" type="submit">Iniciar Sesión</button>
