--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
     </div>
     <footer>
-        <p>&copy; DevKings</p>
+        <p>&copy; PETFI</p>
     </footer>
     <script src="scriptLogin.js"></script>
 </body>
