--- a/dashboard.html
+++ b/dashboard.html
@@ -10,23 +10,45 @@
     <header>
         <div class="top-bar">
             <div class="user-info">
-                <img src="https://avatars.githubusercontent.com/u/96704418?v=4" alt="Usuario" class="user-icon">
-                <span class="user-name">Ernesto Saer(usuario1)</span>
+                <img src="https://i.pinimg.com/736x/3b/73/48/3b73483fa5af06e3ba35f4f71e541e7a.jpg" alt="Usuario" class="user-icon">
+                <span class="user-name" id="user-name">Cargando...</span>
+            </div>
+            <div class="widgets">
+                <div class="widget">
+                    <span>Peso de comida:</span>
+                    <span id="food-weight"></span>
+                </div>
+                <div class="widget">
+                    <span>Temperatura:</span>
+                    <span id="temperature">0 °C</span>
+                </div>
+                <div class="widget">
+                    <span>Humedad:</span>
+                    <span id="humidity">0 %</span>
+                </div>
+                <div class="widget">
+                    <span>Mascota cerca:</span>
+                    <span id="pet-nearby">No</span>
+                </div>
+                <div class="widget">
+                    <button id="activate-camera">Activar cámara</button>
+                </div>
+                <div class="widget">
+                    <button id="dispense-food">Dispensar comida</button>
+                </div>
             </div>
         </div>
     </header>
     <main>
-        <div class="cards-container"></div>
+        <div class="cards-container" id="pet-cards"></div>
         <button id="add-pet-button">Agregar nueva mascota</button>
-        
         <form id="new-pet-form" style="display: none;">
             <label for="pet-name">Nombre:</label>
             <input type="text" id="pet-name" name="pet-name" required>
             <label for="pet-age">Edad:</label>
-            <input type="number" id="pet-age" name="pet-age" min="0" required>
+            <input type="number" id="pet-age" name="pet-age" required>
             <label for="pet-breed">Raza:</label>
             <select id="pet-breed" name="pet-breed" required>
-                <option value="">Seleccione una raza</option>
                 <option value="Labrador">Labrador</option>
                 <option value="Bulldog">Bulldog</option>
                 <option value="Beagle">Beagle</option>
@@ -46,6 +68,51 @@
     <footer>
         <p>&copy; PETFI</p>
     </footer>
+    <button id="logout-button" style="background-color: red; color: white; position: fixed; bottom: 10px; right: 10px;">Cerrar Sesión</button>
+    <script type="module">
+        // Import the functions you need from the SDKs you need
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.2/firebase-app.js";
+        import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/11.0.2/firebase-auth.js";
+        // TODO: Add SDKs for Firebase products that you want to use
+        // https://firebase.google.com/docs/web/setup#available-libraries
+
+        // Your web app's Firebase configuration
+        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+        const firebaseConfig = {
+            apiKey: "AIzaSyBima3wGZ9KZ2DD6BED4rwxayW_2hWnpu8",
+            authDomain: "petfi-ad146.firebaseapp.com",
+            projectId: "petfi-ad146",
+            storageBucket: "petfi-ad146.firebasestorage.app",
+            messagingSenderId: "209794390077",
+            appId: "1:209794390077:web:4cb354ec99046606107254",
+            measurementId: "G-H7J28H377M"
+        };
+
+        // Initialize Firebase
+        const app = initializeApp(firebaseConfig);
+        const auth = getAuth(app);
+
+        // Obtener la información del usuario autenticado
+        onAuthStateChanged(auth, (user) => {
+            if (user) {
+                // Usuario autenticado
+                document.getElementById('user-name').textContent = user.email;
+            } else {
+                // No hay usuario autenticado, redirigir al inicio de sesión
+                window.location.href = 'index.html';
+            }
+        });
+
+        // Funcionalidad de cierre de sesión
+        document.getElementById('logout-button').addEventListener('click', () => {
+            signOut(auth).then(() => {
+                // Redirigir al inicio de sesión
+                window.location.href = 'index.html';
+            }).catch((error) => {
+                console.error('Error al cerrar sesión:', error);
+            });
+        });
+    </script>
     <script src="script.js"></script>
 </body>
 </html>
