--- a/dashboard.html
+++ b/dashboard.html
@@ -64,6 +64,10 @@
             <input type="number" id="pet-weight" name="pet-weight" min="0" required>
             <button type="submit">Registrar Mascota</button>
         </form>
+        <!-- Contenedor para el feed de la cámara -->
+        <div id="camera-container" style="display:none; width:100%; height:500px; background-color: black;">
+            <img id="camera-feed" width="100%" height="100%" />
+        </div>
     </main>
     <footer>
         <p>&copy; PETFI</p>
@@ -111,6 +115,16 @@
             }).catch((error) => {
                 console.error('Error al cerrar sesión:', error);
             });
+        });
+
+        // Funcionalidad de activar cámara
+        document.getElementById('activate-camera').addEventListener('click', () => {
+            const cameraContainer = document.getElementById('camera-container');
+            const cameraFeed = document.getElementById('camera-feed');
+            const cameraUrl = 'http://192.168.189.212:8080/video';  // Reemplaza con la URL generada por IP Webcam
+
+            cameraFeed.src = cameraUrl;
+            cameraContainer.style.display = 'block';
         });
     </script>
     <script src="script.js"></script>
